<resources>
    <string name="app_name">Hoja del mes</string>
    <string name="prefs_file">com.ivione93.myworkout.PREFERENCE_FILE_KEY</string>
    <string name="title_profile">Perfil</string>
    <string name="title_trainings">Entrenamientos</string>
    <string name="title_competitions">Competiciones</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_up">Registro</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Al menos 6 caracteres</string>
    <string name="login_failed">"No se pudo iniciar sesión"</string>
    <string name="title_activity_new_competition">Nueva competición</string>
    <string name="title_activity_new_training">Nuevo entrenamiento</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="new_competition">Nueva competición</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="ultimo_entrenamiento">Último entrenamiento</string>
    <string name="ultima_competicion">Última competición</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>