<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ivione93.mynavapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_trainings"
        android:name="com.ivione93.mynavapp.ui.trainings.TrainingsFragment"
        android:label="@string/title_trainings"
        tools:layout="@layout/fragment_trainings" />

    <fragment
        android:id="@+id/navigation_competitions"
        android:name="com.ivione93.mynavapp.ui.competitions.CompetitionsFragment"
        android:label="@string/title_competitions"
        tools:layout="@layout/fragment_competitions" />
</navigation>